[feat]/ 눈 내리는 효과

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"
+      integrity="sha512-WoO4Ih0CDOSLYafy22wZD/mcJ7k0ESLqtQsFa6zFKnEUrbtuGU+GkLtVhgt93xa2qewG5gKEC6CWlN8OaCTSVg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <style>
       html,
       body {
@@ -13,14 +18,40 @@
         height: 100%;
         overflow: hidden;
       }
-
+      header {
+        background-color: black;
+      }
+      a {
+        text-decoration: none;
+        color: white;
+      }
       canvas {
+        filter: url("#gooey");
         background-color: black;
       }
     </style>
   </head>
   <body>
+    <header>
+      <a href="./index.html">눈</a>
+      <a href="./firework.html">불꽃놀이</a>
+    </header>
     <canvas></canvas>
-    <script type="module" src="./snow.js"></script>
+
+    <svg>
+      <defs>
+        <filter id="gooey">
+          <feGaussianBlur in="SourceGraphic" stdDeviation="0" result="blur1" />
+          <feColorMatrix
+            in="blur1"
+            mode="matrix"
+            values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 100 -23"
+          />
+        </filter>
+      </defs>
+    </svg>
+
+    <script type="module" src="./index.js"></script>
+    <script type="module" src="./firework.js"></script>
   </body>
 </html>
